color contrast + readme update

--- a/battles.html
+++ b/battles.html
@@ -41,9 +41,9 @@
 
     <section id="hero-outer">
         <div id="hero-image"></div>
-        <h2 id="cover-text">Legendary battles<i class="#"></i></h2>
+        <h2 id="cover-text"><span>Legendary Battles</span></h2>
 
-
+<!-- quick summary what made ceasar a great general-->
         <section id="battle-summary">
             <h2>Ceasar strenghts</h2>
             <h3>Leadership</h3>
@@ -73,7 +73,7 @@
         </section>
 
     </section>
-
+    <!--3 famous battles in ceasar his military career-->
     <section id="battle-section">
         <div id="battle-one" class="Lbattle">
             <h2>Battles</h2>
