--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>Julius Ceasar</title>
 </head>
@@ -35,13 +35,13 @@
         </nav>
     </header>
 
-
+    <!-- shows the hero images of the other 2 pages-->
     <section id="other-pages">
         <div id="left-about">
 
             <div class="left-about-heading">
 
-                <h2>Political career</h2>
+                <h2><span>Political Career</span></h2>
             </div>
         </div>
 
@@ -49,13 +49,14 @@
 
             <div class="right-about-heading">
 
-                <h2>Legendary battles</h2>
+                <h2><span>Legendary Battles</span></h2>
 
             </div>
         </div>
 
 
     </section>
+    <!-- the background of ceasar lineage-->
     <section id="about-ceasar">
 
         <h2>About Julius Ceasar</h2>
@@ -109,6 +110,8 @@
         </p>
     </section>
     <footer>
+
+        <!-- sources used to built the website-->
         <div class="sources">
             <h2>Bibliography</h2>
             <ul>
@@ -131,7 +134,7 @@
                     https://www.unrv.com/julius-caesar/caesar-politics.php</li>
             </ul>
         </div>
-
+        <!-- links to social media networks-->
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"
                         aria-label="link to facebook"></i></a></li>
