--- a/political.html
+++ b/political.html
@@ -39,43 +39,43 @@
 
   <section id="hero-outer">
     <div id="hero-image"></div>
-    <h2 id="cover-text"><span>Political Career</span><i class="#"></i></h2>
+    <h2 id="cover-text"><span>Political Career</span></h2>
     
   </section>
 
     <section>
-
+<!-- timeline of julius ceasar politcal career-->
       <div class="timeline" id="end-container">
         <div class="container right">
           <div class="content">
-            <h2>74 BC</h2>
+            <h3>74 BC</h3>
             <p>Caesar was made a member of the politico-ecclesiastical college 
               of pontifices; and on his return he gained one of the elective military tribuneships.</p>
             </div>
           </div>
         <div class="container left">
           <div class="content">
-            <h2>69 BC-65 BC</h2>
+            <h3>69 BC- 65 BC</h3>
             <p>Quaestor is the lowest-ranking regular magistrate in ancient Rome, whose traditional responsibility was
               the treasury. Caesar served his quaestorship in the province of Farther Spain</p>
           </div>
         </div>
         <div class="container right">
           <div class="content">
-            <h2>65 BC - 63 BC</h2>
+            <h3>65 BC - 63 BC</h3>
             <p>Aedile is the magistrate responsible for the care and supervision of the markets, also issued edicts.</p>
           </div>
         </div>
         <div class="container left">
           <div class="content">
-            <h2>63 BC</h2>
+            <h3>63 BC</h3>
             <p>Pontifex maximus was the chief high priest of the College of Pontiffs in ancient Rome. 
               This was the most important position in the ancient Roman religion.</p>
           </div>
         </div>
         <div class="container right">
           <div class="content">
-            <h2>62 BC</h2>
+            <h3>62 BC</h3>
             <p>Praetor is a judicial officer who had broad authority in cases of equity, was responsible for the
               production of the public games, and, in the absence of consuls, exercised extensive authority in the
               government.</p>
@@ -86,7 +86,7 @@
 
         <div class="container left">
           <div class="content">
-            <h2>60 BC</h2>
+            <h3>60 BC</h3>
             <p>The First Triumvirate was an informal political alliance among three prominent politicians 
               in the late Roman Republic: Gaius Julius Caesar, Gnaeus Pompeius Magnus and Marcus Licinius Crassus. 
               The constitution of the Roman republic had many veto points. In order to bypass constitutional obstacles and force through the political goals of the three men </p>
@@ -94,21 +94,21 @@
         </div>
         <div class="container right">
           <div class="content">
-            <h2>59 BC</h2>
+            <h3>59 BC</h3>
             <p>Consul in ancient Rome, either of the two highest of the ordinary magistracies in the ancient Roman
               Republic. </p>
           </div>
         </div>
         <div class="container left">
           <div class="content">
-            <h2>46 BC - 44 BC</h2>
+            <h3>46 BC - 44 BC</h3>
             <p>Dictator which in the Roman Republic designated a temporary magistrate who was granted extraordinary
               powers in order to deal with state crises.</p>
           </div>
         </div>
         <div class="container right" >
           <div class="content">
-            <h2>44 BC - 15 march</h2>
+            <h3>44 BC - 15 march</h3>
             <p>The conspiracy to assassinate Julius Caesar began with a meeting between Cassius Longinus and his brother-in-law
                Marcus Brutus in the evening of 22 February 44 BC, when after some discussion the two agreed that 
               something had to be done to prevent Caesar from becoming king of the Romans.
