bug fixes and responsivess

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"
                         aria-label="link to youtube"></i></a></li>
             <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"
-                        aria-label="instagram"></i></a></li>
+                        aria-label="link to instagram"></i></a></li>
         </ul>
     </footer>
 
