aria-label misuse update

--- a/404.html
+++ b/404.html
@@ -37,16 +37,16 @@
     <section class="errorPage">
         <div class="errorPage__text">
             <h3>404</h3>
-            <span class="errorPage__button">Return back Home</span>
+            <span class="errorPage__button"><a href="index.html">Return back Home</a></span>
         </div>
         <div class="errorPage__terrain"></div>
     </section>
-
+<footer>
     <ul class="social-networks">
         <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook" aria-label="link to facebook"></i></a></li>
         <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" aria-label="link to twitter"></i></a></li>
         <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square" aria-label="link to youtube"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram" aria-label="instagram"></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="instagram"><i class="fab fa-instagram" aria-label="instagram"></i></a></li>
     </ul>
 </footer>
     
