--- a/404.html
+++ b/404.html
@@ -43,10 +43,10 @@
     </section>
 <footer>
     <ul class="social-networks">
-        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook" aria-label="link to facebook"></i></a></li>
-        <li><a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square" aria-label="link to twitter"></i></a></li>
-        <li><a href="https://www.youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square" aria-label="link to youtube"></i></a></li>
-        <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="instagram"><i class="fab fa-instagram" aria-label="instagram"></i></a></li>
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="link to facebook"><i class="fab fa-facebook" ></i></a></li>
+        <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="link to twitter"><i class="fab fa-twitter-square" ></i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank" rel="noopener" aria-label="link to youtube"><i class="fab fa-youtube-square" ></i></a></li>
+        <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="instagram"><i class="fab fa-instagram"></i></a></li>
     </ul>
 </footer>
     
