meta data + readme update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-    <title>Julius Ceasar</title>
+    <title>Julius Ceasar</title><meta name="description" content="Julius Ceasar? a well know character in history but what still so much do discover about history and legacy">
 </head>
 
 <body>
