meta file update

--- a/battles.html
+++ b/battles.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="assets/css/stylesheetbattle.css">
-    <title>Legendary Battles</title>
+    <title>Legendary Battles</title><meta name="description" content="Julius Ceasar? a well know character in history but what still so much do discover about history and legacy">
 </head>
 
 <body>
