--- a/political.html
+++ b/political.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="assets/css/stylesheet.css">
   <link rel="stylesheet" href="assets/css/stylesheetpolitcal.css">
-  <title>Legendary Battles</title><meta name="description" content="Julius Ceasar? a well know character in history but what still so much do discover about history and legacy">
+  <title>Political Career</title><meta name="description" content="Julius Ceasar? a well know character in history but what still so much do discover about history and legacy">
 </head>
 
 <body>
