--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 
     <section class="errorPage">
         <div class="errorPage__text">
-            <h3>404</h3>
+            <h3>Link is not working</h3>
             <span class="errorPage__button"><a href="index.html">Return back Home</a></span>
         </div>
         <div class="errorPage__terrain"></div>
