--- a/political.html
+++ b/political.html
@@ -45,6 +45,7 @@
 
     <section>
 <!-- timeline of julius ceasar politcal career-->
+<!-- inspired by W3C schools-->
       <div class="timeline" id="end-container">
         <div class="container right">
           <div class="content">
